--- a/src/style/view/comment-modal.css
+++ b/src/style/view/comment-modal.css
@@ -13,7 +13,7 @@
 
 .comment-wrapper {
     max-height: 250px;
-    overflow-y: auto;
+    overflow-y: scroll;
     padding: 20px 0;
 }
 
